[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/End.gd" type="Script" id=1]
[ext_resource path="res://Pixel Adventure 1/Free/Items/Checkpoints/End/End (Pressed) (64x64).png" type="Texture" id=2]
[ext_resource path="res://Pixel Adventure 1/Free/Items/Checkpoints/End/End (Idle).png" type="Texture" id=3]
[ext_resource path="res://GodotPlatformer2D/Sounds/level_completed.wav" type="AudioStream" id=4]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.0865385, 0.221154, 0.432692, 0.625, 0.980769 )
colors = PoolColorArray( 0.967773, 0.577355, 0.0113411, 1, 0.979492, 0.653702, 0.0153046, 1, 0.913086, 0.801242, 0.0321007, 1, 0.988192, 0.982771, 0.433054, 1, 0.996078, 0.992157, 0.72549, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0.0227273, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.610429 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 98, 0 )
initial_velocity = 90.0
initial_velocity_random = 0.16
angular_velocity = 100.0
angular_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 2.81
linear_accel_random = 0.24
angle = 30.0
angle_random = 1.0
scale = 2.0
scale_random = 0.19
scale_curve = SubResource( 7 )
color = Color( 1, 0.984314, 0.0156863, 1 )
color_ramp = SubResource( 5 )
hue_variation = 0.8
hue_variation_random = 1.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 20 )

[sub_resource type="Animation" id=2]
resource_name = "end"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "end_anim"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[node name="End" type="Area2D"]
position = Vector2( 1, -32 )
collision_layer = 16
script = ExtResource( 1 )

[node name="particles" type="Particles2D" parent="."]
position = Vector2( -12, -9 )
emitting = false
amount = 24
explosiveness = 0.6
randomness = 0.2
process_material = SubResource( 8 )

[node name="particles2" type="Particles2D" parent="."]
position = Vector2( 10, -10 )
emitting = false
amount = 24
explosiveness = 0.6
randomness = 0.2
process_material = SubResource( 8 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "end"
anims/end = SubResource( 2 )
anims/end_anim = SubResource( 3 )

[node name="wins_fx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[connection signal="body_entered" from="." to="." method="_on_End_body_entered"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
